# MO

./: CMakeLists.txt  Lab1.cpp  Lab11.cpp  Lab12.cpp  Lab2.cpp  Lab3.cpp  Lab4.cpp  Lab5.cpp  Lab5_extra.cpp  Lab6.cpp  Lab7.cpp  Lab8.cpp
data/Lab11/: analytical_values.txt  errors_explicit.txt  errors_implicit_thomas.txt  explicit_values.txt  implicit_lu_values.txt  plot.gp  plot2.gp  plot_analytical.gp  wykres_analityczny  wykres_numeryczny  wykres_numeryczny_laasonen_thomas
data/Lab12/: plot.gp  punkty_funkcji.txt  punkty_interpolacji_czebyszew.txt  punkty_interpolacji_lagrange.txt  wykres_funkcji.gp
data/Lab2/: dane.txt  plot.gp  wyniki_2.txt
results/: wyniki_1_lab_2.txt  wyniki_2_lab_2.txt
