cmake_minimum_required(VERSION 3.30)
project(Metody_Obliczeniowe)

set(CMAKE_CXX_STANDARD 20)

add_executable(Lab1 Lab1.cpp)
add_executable(Lab2 Lab2.cpp)
add_executable(Lab3 Lab3.cpp)
add_executable(Lab4 Lab4.cpp)
add_executable(Lab5 Lab5.cpp)
add_executable(Lab6 Lab6.cpp)
add_executable(Lab7 Lab7.cpp)